<resources>
    <string name="app_name">Top 10 Best Seller</string>
    <string name="books_name">Judul Buku</string>
    <string name="penulis">Penulis</string>
    <string name="description">Sinopsis</string>
    <string name="negara">Negara</string>
    <string name="bahasa">Bahasa</string>
    <string name="genre">Genre</string>
    <string name="penerbit">Penerbit</string>
    <string name="tgl_terbit">Tahun Terbit</string>
    <string name="hlm">Halaman</string>
    <string name="isbn">ISBN</string>
    <string name="detail_book">Detail Buku</string>
    <string name="about_page">About Page</string>
    <string name="nama">Katherine Febrianty Sumartono</string>
    <string name="email">a553d4kx4344@bangkit.academy</string>
    <string-array name="data_name">
        <item>Cantik Itu Luka</item>
        <item>Cerita-cerita Bahagia Hampir Seluruhnya</item>
        <item>Kita Pergi Hari Ini</item>
        <item>The Star and I</item>
        <item>Bibi Gill</item>
        <item>Layangan Putus</item>
        <item>Hujan</item>
        <item>Home Sweet Loan</item>
        <item>Heartbreak Motel</item>
        <item>Laut Bercerita</item>
    </string-array>
    <string-array name="data_penulis">
        <item>Eka Kurniawan</item>
        <item>Norman Erikson Pasaribu</item>
        <item>Ziggy Z</item>
        <item>Ilana Tan</item>
        <item>Tere Liye</item>
        <item>Mommy ASF</item>
        <item>Tere Liye</item>
        <item>Almira Bastari</item>
        <item>Ika Natassa</item>
        <item>Leila S. Chudori</item>
    </string-array>
</resources>